--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "devDependencies": {
     "@types/node": "16.11.11",
     "@types/react": "17.0.37",
+    "@types/warning": "^3.0.0",
     "autoprefixer": "^10.4.0",
     "eslint": "8.4.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.1.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.4",
+    "prettier": "2.7.1",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2"
   }
